# goit-pythonweb-hw-01

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
hw01_factory/: main.py
hw01_factory/vehicles/: concrete.py  factory.py
hw02_solid/: interfaces.py  library.py  main.py  manager.py  models.py
hw02_solid/tests/: test_solid.py
vehicles/: base.py  concrete.py  factory.py
